--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: saragibby
 email: saragibby@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   some awesome description
-baseurl: "jekyll" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://saragibby.github.io" # the base hostname & protocol for your site
 twitter_username: saragibby
 github_username:  saragibby
