remove last slash???

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: http://saragibby.github.io/
+url: http://saragibby.github.io
 baseurl: '/'
 title: saragibby
 author: Sara Gibbons
